# config-app

./: .gitignore  README.md  config-app.cabal
example/echo-config/: README.md  config.yaml  echo-config.cabal  stack.yaml
example/echo-config/src/: Main.hs
src/System/: AesonOptions.hs  ConfigApp.hs
