name:                config-app
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/config-app#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     System.ConfigApp
                     , System.AesonOptions
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , directory
                     , filepath
                     , interpolatedstring-perl6
                     , optparse-applicative
                     , uniplate
                     , yaml
  default-language:    Haskell2010
  default-extensions:
    DeriveDataTypeable
    DeriveGeneric
    GeneralizedNewtypeDeriving
    RecordWildCards
    TemplateHaskell
    QuasiQuotes

source-repository head
  type:     git
  location: https://github.com/githubuser/config-app
